# vdj-quickfilter-pro

./: CLAUDE.md  README.md  compile_flags.txt  deploy.sh  justfile  meson.build
data/: Info.plist.in
src/: Main.cpp  MyPlugin8.cpp  MyPlugin8.h
src.bak/: main.cpp
tools/stubs/: MacTypes.h
tools/stubs/CoreFoundation/: CoreFoundation.h
